[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="HTTPRequest"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 42.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 42.0

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
margin_right = 986.0
margin_bottom = 42.0
size_flags_horizontal = 3
text = "https://godotengine.org"

[node name="Button" type="Button" parent="HBoxContainer"]
margin_left = 990.0
margin_right = 1024.0
margin_bottom = 42.0
text = "Go!"
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="text_entered" from="HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
